# DisBotGPT-Py

./: .gitignore  LICENSE  README.md  config.ini  main.py  pyproject.toml  requirements.txt
src/: __init__.py  config.ini  requirements.txt
src/classes/: bot.py  configuration.py  database.py  messaging.py
